WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103382
PDFPlugin: Scroll bars do not grow on hover
https://bugs.webkit.org/show_bug.cgi?id=103382
Summary
PDFPlugin: Scroll bars do not grow on hover
Tim Horton
Reported
2012-11-27 02:24:00 PST
<
rdar://problem/12555262
>
Attachments
patch
(11.12 KB, patch)
2012-11-27 02:39 PST
,
Tim Horton
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2012-11-27 02:24:15 PST
This also covers non-overlay scrollbars not glowing, etc.
Tim Horton
Comment 2
2012-11-27 02:39:28 PST
Created
attachment 176213
[details]
patch
Beth Dakin
Comment 3
2012-11-27 13:00:34 PST
Comment on
attachment 176213
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=176213&action=review
> Source/WebKit2/WebProcess/Plugins/PDF/PDFPlugin.mm:436 > + if (magnification) {
I don't think you need these brackets.
> Source/WebKit2/WebProcess/Plugins/PDF/PDFPlugin.mm:566 > + } else if (targetScrollbarForLastMousePosition)
Is 'else if' right here? Will there ever be a situation where you want to sent a mouseEntered for one scrollbar AND a mouseExited for another?
Tim Horton
Comment 4
2012-11-27 13:48:50 PST
(In reply to
comment #3
)
> (From update of
attachment 176213
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=176213&action=review
> > > Source/WebKit2/WebProcess/Plugins/PDF/PDFPlugin.mm:436 > > + if (magnification) { > > I don't think you need these brackets.
Nope! They're a figment of debugging, sorry.
> > Source/WebKit2/WebProcess/Plugins/PDF/PDFPlugin.mm:566 > > + } else if (targetScrollbarForLastMousePosition) > > Is 'else if' right here? Will there ever be a situation where you want to sent a mouseEntered for one scrollbar AND a mouseExited for another?
Though it will rarely come up in practice, you're right. Thanks, Beth!
Tim Horton
Comment 5
2012-11-27 13:57:53 PST
http://trac.webkit.org/changeset/135916
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug