Source/WebKit2/WebProcess/Plugins/PDF/PDFPlugin.mm
@@ -405,6 +405,16 @@ PlatformLayer* PDFPlugin::pluginLayer()
     return m_containerLayer.get();
 }
 
+IntPoint PDFPlugin::convertFromRootViewToPlugin(const IntPoint& point) const
+{
+    return m_rootViewToPluginTransform.mapPoint(point);
+}
+
+IntPoint PDFPlugin::convertFromPluginToPDFView(const IntPoint& point) const
+{
+    return IntPoint(point.x(), size().height() - point.y());
+}
+
 void PDFPlugin::geometryDidChange(const IntSize& pluginSize, const IntRect&, const AffineTransform& pluginToRootViewTransform)
 {
     if (size() == pluginSize && pluginView()->pageScaleFactor() == [m_pdfLayerController.get() contentScaleFactor])
@@ -422,9 +432,9 @@ void PDFPlugin::geometryDidChange(const IntSize& pluginSize, const IntRect&, con
     if (handlesPageScaleFactor()) {
         CGFloat magnification = pluginView()->pageScaleFactor() - [m_pdfLayerController.get() contentScaleFactor];
 
-        // FIXME: Instead of m_lastMousePoint, we should use the zoom origin from PluginView::setPageScaleFactor.
+        // FIXME: Instead of m_lastMousePositionInPluginCoordinates, we should use the zoom origin from PluginView::setPageScaleFactor.
         if (magnification)
-            [m_pdfLayerController.get() magnifyWithMagnification:magnification atPoint:m_lastMousePoint immediately:NO];
+            [m_pdfLayerController.get() magnifyWithMagnification:magnification atPoint:convertFromPluginToPDFView(m_lastMousePositionInPluginCoordinates) immediately:NO];
     }
 
     calculateSizes();
@@ -493,13 +503,9 @@ static NSEventType eventTypeFromWebEvent(const WebEvent& event)
     
 NSEvent *PDFPlugin::nsEventForWebMouseEvent(const WebMouseEvent& event)
 {
-    IntPoint mousePosition = event.position();
+    m_lastMousePositionInPluginCoordinates = convertFromRootViewToPlugin(event.position());
 
-    IntPoint positionInPDFView(mousePosition);
-    positionInPDFView = m_rootViewToPluginTransform.mapPoint(positionInPDFView);
-    positionInPDFView.setY(size().height() - positionInPDFView.y());
-
-    m_lastMousePoint = positionInPDFView;
+    IntPoint positionInPDFViewCoordinates(convertFromPluginToPDFView(m_lastMousePositionInPluginCoordinates));
 
     NSEventType eventType = eventTypeFromWebEvent(event);
 
@@ -508,19 +514,36 @@ NSEvent *PDFPlugin::nsEventForWebMouseEvent(const WebMouseEvent& event)
 
     NSUInteger modifierFlags = modifierFlagsFromWebEvent(event);
 
-    return [NSEvent mouseEventWithType:eventType location:positionInPDFView modifierFlags:modifierFlags timestamp:0 windowNumber:0 context:nil eventNumber:0 clickCount:event.clickCount() pressure:0];
+    return [NSEvent mouseEventWithType:eventType location:positionInPDFViewCoordinates modifierFlags:modifierFlags timestamp:0 windowNumber:0 context:nil eventNumber:0 clickCount:event.clickCount() pressure:0];
 }
 
 bool PDFPlugin::handleMouseEvent(const WebMouseEvent& event)
 {
+    PlatformMouseEvent platformEvent = platform(event);
+    IntPoint mousePosition = convertFromRootViewToPlugin(event.position());
+
     m_lastMouseEvent = event;
 
-    IntPoint mousePosition = event.position();
+    RefPtr<Scrollbar> targetScrollbar;
+    RefPtr<Scrollbar> targetScrollbarForLastMousePosition;
 
-    // FIXME: Forward mouse events to the appropriate scrollbar.
-    if (IntRect(m_verticalScrollbarLayer.get().frame).contains(mousePosition)
-        || IntRect(m_horizontalScrollbarLayer.get().frame).contains(mousePosition)
-        || IntRect(m_scrollCornerLayer.get().frame).contains(mousePosition))
+    if (m_verticalScrollbarLayer) {
+        IntRect verticalScrollbarFrame(m_verticalScrollbarLayer.get().frame);
+        if (verticalScrollbarFrame.contains(mousePosition))
+            targetScrollbar = verticalScrollbar();
+        if (verticalScrollbarFrame.contains(m_lastMousePositionInPluginCoordinates))
+            targetScrollbarForLastMousePosition = verticalScrollbar();
+    }
+
+    if (m_horizontalScrollbarLayer) {
+        IntRect horizontalScrollbarFrame(m_horizontalScrollbarLayer.get().frame);
+        if (horizontalScrollbarFrame.contains(mousePosition))
+            targetScrollbar = horizontalScrollbar();
+        if (horizontalScrollbarFrame.contains(m_lastMousePositionInPluginCoordinates))
+            targetScrollbarForLastMousePosition = horizontalScrollbar();
+    }
+
+    if (m_scrollCornerLayer && IntRect(m_scrollCornerLayer.get().frame).contains(mousePosition))
         return false;
 
     // Right-clicks and Control-clicks always call handleContextMenuEvent as well.
@@ -532,6 +555,17 @@ bool PDFPlugin::handleMouseEvent(const WebMouseEvent& event)
     switch (event.type()) {
     case WebEvent::MouseMove:
         mouseMovedInContentArea();
+
+        if (targetScrollbar) {
+            if (!targetScrollbarForLastMousePosition) {
+                targetScrollbar->mouseEntered();
+                return true;
+            }
+            return targetScrollbar->mouseMoved(platformEvent);
+        }
+
+        if (!targetScrollbar && targetScrollbarForLastMousePosition)
+            targetScrollbarForLastMousePosition->mouseExited();
 
         switch (event.button()) {
         case WebMouseEvent::LeftButton:
@@ -547,6 +581,9 @@ bool PDFPlugin::handleMouseEvent(const WebMouseEvent& event)
     case WebEvent::MouseDown:
         switch (event.button()) {
         case WebMouseEvent::LeftButton:
+            if (targetScrollbar)
+                return targetScrollbar->mouseDown(platformEvent);
+
             [m_pdfLayerController.get() mouseDown:nsEvent];
             return true;
         case WebMouseEvent::RightButton:
@@ -559,6 +596,9 @@ bool PDFPlugin::handleMouseEvent(const WebMouseEvent& event)
     case WebEvent::MouseUp:
         switch (event.button()) {
         case WebMouseEvent::LeftButton:
+            if (targetScrollbar)
+                return targetScrollbar->mouseUp(platformEvent);
+
             [m_pdfLayerController.get() mouseUp:nsEvent];
             return true;
         case WebMouseEvent::RightButton:
